add tag to data

--- a/01-prepare_data.ipynb
+++ b/01-prepare_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,7 @@
        "      <th>object</th>\n",
        "      <th>tu</th>\n",
        "      <th>end</th>\n",
+       "      <th>tag</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -74,6 +75,7 @@
        "      <td>0-3-3-C2960X</td>\n",
        "      <td>ДГУ</td>\n",
        "      <td>2024-01-24 15:00:05</td>\n",
+       "      <td>network</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -87,6 +89,7 @@
        "      <td>0-3-3-C2960X</td>\n",
        "      <td>ДГУ</td>\n",
        "      <td>2024-01-24 15:00:05</td>\n",
+       "      <td>network</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -100,6 +103,7 @@
        "      <td>0-3-3-C2960X</td>\n",
        "      <td>ДГУ</td>\n",
        "      <td>2024-01-23 09:40:05</td>\n",
+       "      <td>network</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -113,6 +117,7 @@
        "      <td>0-3-3-C2960X</td>\n",
        "      <td>ДГУ</td>\n",
        "      <td>2024-01-15 14:10:05</td>\n",
+       "      <td>network</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -126,9 +131,11 @@
        "      <td>0-3-3-C2960X</td>\n",
        "      <td>ДГУ</td>\n",
        "      <td>2024-01-15 14:10:05</td>\n",
+       "      <td>network</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -152,6 +159,7 @@
        "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
        "      <td>Якутия</td>\n",
        "      <td>2024-03-31 04:40:56</td>\n",
+       "      <td>perfomance</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3181</th>\n",
@@ -165,6 +173,7 @@
        "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
        "      <td>Якутия</td>\n",
        "      <td>2024-03-31 04:40:54</td>\n",
+       "      <td>perfomance</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3182</th>\n",
@@ -178,6 +187,7 @@
        "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
        "      <td>Якутия</td>\n",
        "      <td>2024-03-29 15:46:47</td>\n",
+       "      <td>vm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3185</th>\n",
@@ -191,6 +201,7 @@
        "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
        "      <td>Якутия</td>\n",
        "      <td>2024-03-29 15:46:44</td>\n",
+       "      <td>vm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3186</th>\n",
@@ -204,10 +215,11 @@
        "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
        "      <td>Якутия</td>\n",
        "      <td>2024-03-29 15:46:42</td>\n",
+       "      <td>vm</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5955 rows × 10 columns</p>\n",
+       "<p>5955 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -250,23 +262,23 @@
        "3185        12  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
        "3186        12  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
        "\n",
-       "                     end  \n",
-       "0    2024-01-24 15:00:05  \n",
-       "1    2024-01-24 15:00:05  \n",
-       "2    2024-01-23 09:40:05  \n",
-       "3    2024-01-15 14:10:05  \n",
-       "4    2024-01-15 14:10:05  \n",
-       "...                  ...  \n",
-       "3180 2024-03-31 04:40:56  \n",
-       "3181 2024-03-31 04:40:54  \n",
-       "3182 2024-03-29 15:46:47  \n",
-       "3185 2024-03-29 15:46:44  \n",
-       "3186 2024-03-29 15:46:42  \n",
+       "                     end         tag  \n",
+       "0    2024-01-24 15:00:05     network  \n",
+       "1    2024-01-24 15:00:05     network  \n",
+       "2    2024-01-23 09:40:05     network  \n",
+       "3    2024-01-15 14:10:05     network  \n",
+       "4    2024-01-15 14:10:05     network  \n",
+       "...                  ...         ...  \n",
+       "3180 2024-03-31 04:40:56  perfomance  \n",
+       "3181 2024-03-31 04:40:54  perfomance  \n",
+       "3182 2024-03-29 15:46:47          vm  \n",
+       "3185 2024-03-29 15:46:44          vm  \n",
+       "3186 2024-03-29 15:46:42          vm  \n",
        "\n",
-       "[5955 rows x 10 columns]"
+       "[5955 rows x 11 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,13 +314,62 @@
     "    df_events = pd.concat([df_events,ds_events])\n",
     "\n",
     "df_events.rename(columns = {'hardware':'model', 'site_address_a':'address', 'Событие':'event', 'Важность':'level', 'Дата':'start', 'Длительность':'duration', 'Объект':'object', 'ТУ':'tu', 'Востановление':'end'}, inplace = True )\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_events.loc[df_events.event.str.find('Изменилось состояние диска') != -1,'event'] = 'Сигнализация предупреждения на диске'\n",
+    "df_events.loc[df_events.event.str.find('Изменилось состояние') != -1,'event'] = 'Сигнализация предупреждения на оборудовании'\n",
+    "df_events.loc[df_events.event.str.find('неоптимальном состоянии') != -1,'event'] = 'Сигнализация предупреждения на оборудовании'\n",
+    "df_events.loc[df_events.event.str.find('DHCP') != -1,'event'] = 'Ошибка на DHCP'\n",
+    "df_events.loc[df_events.event.str.find('Zabbix') != -1,'event'] = 'Ошибка Zabbix'\n",
+    "\n",
+    "df_events.loc[df_events.event.str.find('недоступ') != -1,'tag'] = 'available'\n",
+    "df_events.loc[df_events.event.str.find('задержк') != -1,'tag'] = 'perfomance'\n",
+    "df_events.loc[df_events.event.str.find('загрузк') != -1,'tag'] = 'perfomance'\n",
+    "df_events.loc[df_events.event.str.find('емператур') != -1,'tag'] = 'enviroment'\n",
+    "df_events.loc[df_events.event.str.find('тока') != -1,'tag'] = 'power'\n",
+    "df_events.loc[df_events.event.str.find('напряжение') != -1,'tag'] = 'power'\n",
+    "df_events.loc[df_events.event.str.find('нагрузка на ИБП') != -1,'tag'] = 'power'\n",
+    "df_events.loc[df_events.event.str.find('гипервиз') != -1,'tag'] = 'vm'\n",
+    "df_events.loc[df_events.event.str.find('протечк') != -1,'tag'] = 'enviroment'\n",
+    "df_events.loc[df_events.event.str.find('аканчив') != -1,'tag'] = 'available'\n",
+    "df_events.loc[df_events.event.str.find('igh') != -1,'tag'] = 'perfomance'\n",
+    "df_events.loc[df_events.event.str.find('устрой') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('данн') != -1,'tag'] = 'available'\n",
+    "df_events.loc[df_events.event.str.find('PING') != -1,'tag'] = 'network'\n",
+    "df_events.loc[df_events.event.str.find('порт') != -1,'tag'] = 'network'\n",
+    "df_events.loc[df_events.event.str.find('оборуд') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('работает от батар') != -1,'tag'] = 'ext_power'\n",
+    "df_events.loc[df_events.event.str.find('давлен') != -1,'tag'] = 'aspt'\n",
+    "df_events.loc[df_events.event.str.find('возду') != -1,'tag'] = 'enviroment'\n",
+    "df_events.loc[df_events.event.str.find('сточник питан') != -1,'tag'] = 'power'\n",
+    "df_events.loc[df_events.event.str.find('вария') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('критич') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('остоян') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('Общий статус - Предупреждение') != -1,'tag'] = 'vm'\n",
+    "df_events.loc[df_events.event.str.find('Disk space') != -1,'tag'] = 'available'\n",
+    "df_events.loc[df_events.event.str.find('заряд батареи') != -1,'tag'] = 'available'\n",
+    "df_events.loc[df_events.event.str.find('замена батарей') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('critical state') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('Порт отключен') != -1,'tag'] = 'network'\n",
+    "df_events.loc[df_events.event.str.find('Потеряно сетевое') != -1,'tag'] = 'network'\n",
+    "df_events.loc[df_events.event.str.find('Кластер АПКШ') != -1,'tag'] = 'network'\n",
+    "df_events.loc[df_events.event.str.find('конденсат') != -1,'tag'] = 'enviroment'\n",
+    "\n",
+    "df_events.loc[df_events.event.str.find('Сигнализация ошибки на ИБП') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('Ошибка самотестирования') != -1,'tag'] = 'hardware'\n",
+    "df_events.loc[df_events.event.str.find('Пуск дизеля') != -1,'tag'] = 'ext_power'\n",
+    "df_events.loc[df_events.tag.isnull(), 'tag'] = 'other'\n",
+    "\n",
+    "\n",
+    "\n",
     "df_events.to_excel('events.xlsx',index=False)\n",
     "df_events"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +549,7 @@
        "[1178 rows x 6 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
