--- a/02-analyz.ipynb
+++ b/02-analyz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [],
    "source": [
     "events = pd.read_excel('events.xlsx')\n",
     "objects = pd.read_excel('objects.xlsx')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 454,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>model</th>\n",
+       "      <th>address</th>\n",
+       "      <th>event</th>\n",
+       "      <th>level</th>\n",
+       "      <th>start</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>object</th>\n",
+       "      <th>tu</th>\n",
+       "      <th>end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ИБ</td>\n",
+       "      <td>Cisco Catalyst C2960X</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>[#Manual] PortSecurity - Заблокирован порт</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-23 15:10:02</td>\n",
+       "      <td>85803</td>\n",
+       "      <td>0-3-3-C2960X</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>2024-01-24 15:00:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ИБ</td>\n",
+       "      <td>Cisco Catalyst C2960X</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>[#Manual] PortSecurity - Заблокирован порт</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-23 15:08:34</td>\n",
+       "      <td>85891</td>\n",
+       "      <td>0-3-3-C2960X</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>2024-01-24 15:00:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ИБ</td>\n",
+       "      <td>Cisco Catalyst C2960X</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>[#Manual] PortSecurity - Заблокирован порт</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-22 14:44:22</td>\n",
+       "      <td>68143</td>\n",
+       "      <td>0-3-3-C2960X</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>2024-01-23 09:40:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ИБ</td>\n",
+       "      <td>Cisco Catalyst C2960X</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>[#Manual] PortSecurity - Заблокирован порт</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-15 11:59:21</td>\n",
+       "      <td>7844</td>\n",
+       "      <td>0-3-3-C2960X</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>2024-01-15 14:10:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ИБ</td>\n",
+       "      <td>Cisco Catalyst C2960X</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>[#Manual] PortSecurity - Заблокирован порт</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-01-15 11:59:16</td>\n",
+       "      <td>7849</td>\n",
+       "      <td>0-3-3-C2960X</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>2024-01-15 14:10:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5950</th>\n",
+       "      <td>СКСД</td>\n",
+       "      <td>Vmware vCenter 5.5</td>\n",
+       "      <td>Якутия - Якутск</td>\n",
+       "      <td>Высокая загрузка памяти</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-03-29 15:50:56</td>\n",
+       "      <td>132600</td>\n",
+       "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
+       "      <td>Якутия</td>\n",
+       "      <td>2024-03-31 04:40:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5951</th>\n",
+       "      <td>СКСД</td>\n",
+       "      <td>Vmware vCenter 5.5</td>\n",
+       "      <td>Якутия - Якутск</td>\n",
+       "      <td>Высокая загрузка памяти</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-03-29 15:50:54</td>\n",
+       "      <td>132600</td>\n",
+       "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
+       "      <td>Якутия</td>\n",
+       "      <td>2024-03-31 04:40:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5952</th>\n",
+       "      <td>СКСД</td>\n",
+       "      <td>Vmware vCenter 5.5</td>\n",
+       "      <td>Якутия - Якутск</td>\n",
+       "      <td>Индикация предупреждения на гипервизоре</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-03-29 15:46:35</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
+       "      <td>Якутия</td>\n",
+       "      <td>2024-03-29 15:46:47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5953</th>\n",
+       "      <td>СКСД</td>\n",
+       "      <td>Vmware vCenter 5.5</td>\n",
+       "      <td>Якутия - Якутск</td>\n",
+       "      <td>Индикация предупреждения на гипервизоре</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-03-29 15:46:32</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
+       "      <td>Якутия</td>\n",
+       "      <td>2024-03-29 15:46:44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5954</th>\n",
+       "      <td>СКСД</td>\n",
+       "      <td>Vmware vCenter 5.5</td>\n",
+       "      <td>Якутия - Якутск</td>\n",
+       "      <td>Индикация предупреждения на гипервизоре</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2024-03-29 15:46:30</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Якутия - Якутск / СКСД (S98VCENTER)</td>\n",
+       "      <td>Якутия</td>\n",
+       "      <td>2024-03-29 15:46:42</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5955 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      type                  model          address  \\\n",
+       "0       ИБ  Cisco Catalyst C2960X  ДГУ - Океанский   \n",
+       "1       ИБ  Cisco Catalyst C2960X  ДГУ - Океанский   \n",
+       "2       ИБ  Cisco Catalyst C2960X  ДГУ - Океанский   \n",
+       "3       ИБ  Cisco Catalyst C2960X  ДГУ - Океанский   \n",
+       "4       ИБ  Cisco Catalyst C2960X  ДГУ - Океанский   \n",
+       "...    ...                    ...              ...   \n",
+       "5950  СКСД     Vmware vCenter 5.5  Якутия - Якутск   \n",
+       "5951  СКСД     Vmware vCenter 5.5  Якутия - Якутск   \n",
+       "5952  СКСД     Vmware vCenter 5.5  Якутия - Якутск   \n",
+       "5953  СКСД     Vmware vCenter 5.5  Якутия - Якутск   \n",
+       "5954  СКСД     Vmware vCenter 5.5  Якутия - Якутск   \n",
+       "\n",
+       "                                           event  level               start  \\\n",
+       "0     [#Manual] PortSecurity - Заблокирован порт      2 2024-01-23 15:10:02   \n",
+       "1     [#Manual] PortSecurity - Заблокирован порт      2 2024-01-23 15:08:34   \n",
+       "2     [#Manual] PortSecurity - Заблокирован порт      2 2024-01-22 14:44:22   \n",
+       "3     [#Manual] PortSecurity - Заблокирован порт      2 2024-01-15 11:59:21   \n",
+       "4     [#Manual] PortSecurity - Заблокирован порт      2 2024-01-15 11:59:16   \n",
+       "...                                          ...    ...                 ...   \n",
+       "5950                     Высокая загрузка памяти      2 2024-03-29 15:50:56   \n",
+       "5951                     Высокая загрузка памяти      2 2024-03-29 15:50:54   \n",
+       "5952     Индикация предупреждения на гипервизоре      2 2024-03-29 15:46:35   \n",
+       "5953     Индикация предупреждения на гипервизоре      2 2024-03-29 15:46:32   \n",
+       "5954     Индикация предупреждения на гипервизоре      2 2024-03-29 15:46:30   \n",
+       "\n",
+       "      duration                               object      tu  \\\n",
+       "0        85803                         0-3-3-C2960X     ДГУ   \n",
+       "1        85891                         0-3-3-C2960X     ДГУ   \n",
+       "2        68143                         0-3-3-C2960X     ДГУ   \n",
+       "3         7844                         0-3-3-C2960X     ДГУ   \n",
+       "4         7849                         0-3-3-C2960X     ДГУ   \n",
+       "...        ...                                  ...     ...   \n",
+       "5950    132600  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
+       "5951    132600  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
+       "5952        12  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
+       "5953        12  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
+       "5954        12  Якутия - Якутск / СКСД (S98VCENTER)  Якутия   \n",
+       "\n",
+       "                     end  \n",
+       "0    2024-01-24 15:00:05  \n",
+       "1    2024-01-24 15:00:05  \n",
+       "2    2024-01-23 09:40:05  \n",
+       "3    2024-01-15 14:10:05  \n",
+       "4    2024-01-15 14:10:05  \n",
+       "...                  ...  \n",
+       "5950 2024-03-31 04:40:56  \n",
+       "5951 2024-03-31 04:40:54  \n",
+       "5952 2024-03-29 15:46:47  \n",
+       "5953 2024-03-29 15:46:44  \n",
+       "5954 2024-03-29 15:46:42  \n",
+       "\n",
+       "[5955 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 454,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "events"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 467,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>object</th>\n",
+       "      <th>tu</th>\n",
+       "      <th>address</th>\n",
+       "      <th>type</th>\n",
+       "      <th>model</th>\n",
+       "      <th>date_add</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Анадырь - Дежнева / Сервер (s77srkias01)</td>\n",
+       "      <td>Анадырь</td>\n",
+       "      <td>Анадырь - Дежнева</td>\n",
+       "      <td>Физический сервер</td>\n",
+       "      <td>HP DL380 G7</td>\n",
+       "      <td>2024-03-28 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Анадырь - Дежнева / Сервер (s77srkiod01)</td>\n",
+       "      <td>Анадырь</td>\n",
+       "      <td>Анадырь - Дежнева</td>\n",
+       "      <td>Физический сервер</td>\n",
+       "      <td>HP DL380 G7</td>\n",
+       "      <td>2024-03-28 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Анадырь - Дежнева / Сервер (S77SRKUPR01)</td>\n",
+       "      <td>Анадырь</td>\n",
+       "      <td>Анадырь - Дежнева</td>\n",
+       "      <td>Физический сервер</td>\n",
+       "      <td>HP DL380 G7</td>\n",
+       "      <td>2024-03-28 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Анадырь - Дежнева / Ленточная библиотека (S77S...</td>\n",
+       "      <td>Анадырь</td>\n",
+       "      <td>Анадырь - Дежнева</td>\n",
+       "      <td>Ленточная библиотека</td>\n",
+       "      <td>HP D2D4009i</td>\n",
+       "      <td>2024-03-28 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Анадырь - Дежнева / Ленточная библиотека (S77S...</td>\n",
+       "      <td>Анадырь</td>\n",
+       "      <td>Анадырь - Дежнева</td>\n",
+       "      <td>Ленточная библиотека</td>\n",
+       "      <td>HP D2D4009i</td>\n",
+       "      <td>2024-03-28 00:00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1173</th>\n",
+       "      <td>ДГУ - ЛВС - Светланская 71 / C3550-48_01</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>Прочее</td>\n",
+       "      <td>Узел сети</td>\n",
+       "      <td>2023-07-01 19:08:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1174</th>\n",
+       "      <td>ДГУ - ЛВС - Светланская 71 / c3548XL_02_TND48</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>ДГУ - Океанский</td>\n",
+       "      <td>Прочее</td>\n",
+       "      <td>Узел сети</td>\n",
+       "      <td>2023-07-01 19:08:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1175</th>\n",
+       "      <td>ДГУ - Светланская 71 / 17 (iNode)</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>ДГУ - Светланская 71</td>\n",
+       "      <td>Web/SNMP - адаптер</td>\n",
+       "      <td>iNode-Light</td>\n",
+       "      <td>2023-07-01 19:08:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>ДГУ - Светланская 111 / Серверная (ИБП 1)</td>\n",
+       "      <td>ДГУ</td>\n",
+       "      <td>ДГУ - Светланская 111</td>\n",
+       "      <td>ИБП</td>\n",
+       "      <td>APC Smart-UPS</td>\n",
+       "      <td>2023-07-01 19:08:32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1177</th>\n",
+       "      <td>Хабаровск - Воронежская / 2212 (Температура)</td>\n",
+       "      <td>Хабаровск</td>\n",
+       "      <td>Хабаровск - Воронежская</td>\n",
+       "      <td>Web/SNMP - адаптер</td>\n",
+       "      <td>Uniping</td>\n",
+       "      <td>2023-07-01 19:08:32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1178 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 object         tu  \\\n",
+       "0              Анадырь - Дежнева / Сервер (s77srkias01)    Анадырь   \n",
+       "1              Анадырь - Дежнева / Сервер (s77srkiod01)    Анадырь   \n",
+       "2              Анадырь - Дежнева / Сервер (S77SRKUPR01)    Анадырь   \n",
+       "3     Анадырь - Дежнева / Ленточная библиотека (S77S...    Анадырь   \n",
+       "4     Анадырь - Дежнева / Ленточная библиотека (S77S...    Анадырь   \n",
+       "...                                                 ...        ...   \n",
+       "1173           ДГУ - ЛВС - Светланская 71 / C3550-48_01        ДГУ   \n",
+       "1174      ДГУ - ЛВС - Светланская 71 / c3548XL_02_TND48        ДГУ   \n",
+       "1175                  ДГУ - Светланская 71 / 17 (iNode)        ДГУ   \n",
+       "1176          ДГУ - Светланская 111 / Серверная (ИБП 1)        ДГУ   \n",
+       "1177       Хабаровск - Воронежская / 2212 (Температура)  Хабаровск   \n",
+       "\n",
+       "                      address                  type          model  \\\n",
+       "0           Анадырь - Дежнева     Физический сервер    HP DL380 G7   \n",
+       "1           Анадырь - Дежнева     Физический сервер    HP DL380 G7   \n",
+       "2           Анадырь - Дежнева     Физический сервер    HP DL380 G7   \n",
+       "3           Анадырь - Дежнева  Ленточная библиотека    HP D2D4009i   \n",
+       "4           Анадырь - Дежнева  Ленточная библиотека    HP D2D4009i   \n",
+       "...                       ...                   ...            ...   \n",
+       "1173          ДГУ - Океанский                Прочее      Узел сети   \n",
+       "1174          ДГУ - Океанский                Прочее      Узел сети   \n",
+       "1175     ДГУ - Светланская 71    Web/SNMP - адаптер    iNode-Light   \n",
+       "1176    ДГУ - Светланская 111                   ИБП  APC Smart-UPS   \n",
+       "1177  Хабаровск - Воронежская    Web/SNMP - адаптер        Uniping   \n",
+       "\n",
+       "                date_add  \n",
+       "0    2024-03-28 00:00:00  \n",
+       "1    2024-03-28 00:00:00  \n",
+       "2    2024-03-28 00:00:00  \n",
+       "3    2024-03-28 00:00:00  \n",
+       "4    2024-03-28 00:00:00  \n",
+       "...                  ...  \n",
+       "1173 2023-07-01 19:08:32  \n",
+       "1174 2023-07-01 19:08:32  \n",
+       "1175 2023-07-01 19:08:32  \n",
+       "1176 2023-07-01 19:08:32  \n",
+       "1177 2023-07-01 19:08:32  \n",
+       "\n",
+       "[1178 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 467,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objects"
    ]
   }
  ],
